# RushesHour

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  NOTICES  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_gui.sh  rusheshour_gui.py  sort_rush.py
packaging/: build_deb.sh
rusheshour/: __init__.py
rusheshour/cli/: main.py  menus.py  parser.py
rusheshour/core/: __init__.py  actions.py  convert.py  export.py  probe.py  repair.py  scanner.py  session.py
rusheshour/gui/: __init__.py  dialogs.py  file_panel.py  main_window.py  player_widget.py  timeline_widget.py
tests/: conftest.py  test_convert.py  test_export.py  test_probe.py  test_repair.py  test_scanner.py
