[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rusheshour"
version = "0.9.0"
description = "Outil de tri interactif de rush vidéo"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gui = ["PyQt6>=6.4", "python-mpv>=1.0.0"]
dev = ["pytest>=7.0", "pytest-qt"]

[project.scripts]
sort-rush = "rusheshour.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rusheshour*"]

[tool.pytest.ini_options]
markers = ["integration: tests nécessitant ffmpeg installé"]
